2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.cpp:
	* MFImage.svg:
	* SFImage.svg: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointList.cpp: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* GeometryPropertiesEditor.xml:
	* Pyramid.x3dv: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineSelection.cpp:
	* ProximitySensor.x3dv:
	* TransformSensor.x3dv:
	* VisibilitySensor.x3dv: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* NULL.svg:
	* OutlineTreeData.h:
	* OutlineSelection.h:
	* OutlineTreeData.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeModel.cpp: 

2014-08-01  Holger Seelig  <holger.seelig@yahoo.de>

	* MaterialEditor.h:
	* MaterialEditor.cpp: 

2014-08-01  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* X3DEditorObject.h:
	* Cairo.h:
	* X3DEditorObject.cpp:
	* Cairo.cpp:
	* SFColorButton.h:
	* SFColorRGBAButton.h:
	* X3DTexture2DNodeEditor.cpp:
	* TextureEditorPreview.x3dv:
	* MaterialEditorPreview.x3dv: 

2014-08-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Cairo.h:
	* SFColorButton.h: