@@ -1,5 +1,10 @@
 2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.cpp:
+	* BrowserWindow.xml: 
+
+2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.h:
 	* BrowserWindow.cpp:
 	* BrowserWindow.xml:
